# musicBox

./: Makefile  Makefile.1  README.md  configure.sh  connectWIFI.sh  depFunc.cpp  mainFunc.cpp  mainFunc.h  mozart  mozart.cpp  musicBoxMain.cpp  musicBoxMain.h  packtoScp.sh  pi@192.168.6.125  run.sh  threadFunc.cpp  threadFunc.h
AudioService/: AsrLauncher.cpp  AsrService.cpp  AsrService.h  AudioPreprocessAsrListenner.h  AudioPreprocessDispatcher.cpp  AudioPreprocessDispatcher.h  AudioPreprocessListenner.h  DeviceInfo.cpp  DownloadService.cpp  DownloadService.h  IWakeupService.cpp  IWakeupService.h  LedService.cpp  LedService.h  Makefile  NeteaseMusicLanucher.cpp  NeteaseMusicLanucher.h  NeteaseMusicService.cpp  NeteaseMusicService.h  SemanticsAnalysis.cpp  SemanticsAnalysis.h  TtsService.cpp  TtsService.h  WakeupEvent.cpp  WakeupEvent.h  WakeupService.cpp
Linux_aisound_exp1208_aitalk_exp1208_awaken_exp1208_aiui5.5.1043.0000_iat1208_ise1158_tts_online1208_5b73ec35/: brief.txt  release.txt  wordlist.txt
MicDataSource/: Makefile  MicDataSource.cpp  MicDataSource.h
PlayBackAudio/: Makefile  PlayBackAudio.cpp  PlayBackAudio.h
abnormal-sound-detection/: Makefile  install.sh  mozart.cpp  mozart_script  run.sh  runMozart.sh
api/: Ali_RestfulASR.cpp  Ali_RestfulASR.h  Ali_TokenkeyRes.cpp  Ali_TokenkeyRes.h  TokenHolder.h  TtsResult.h  TwirlingVad.cpp  TwirlingVad.h  aliRestfulAsr.cpp  (+2 more)
example/NlsCommonSdk_restful/: CMakeLists.txt
example/NlsCommonSdk_restful/demo/: fileTransDemo.cpp  restfulAsrDemo  restfulAsrDemo.cpp  restfulTtsDemo.cpp  tokenDemo  tokenDemo.cpp
(+302 files in other folders)
